@@ -63,7 +63,6 @@ import jenkins.security.ResourceDomainRootAction;
 import jenkins.util.SystemProperties;
 import jenkins.util.VirtualFile;
 import org.apache.commons.io.IOUtils;
-import org.apache.commons.lang.StringUtils;
 import org.apache.tools.zip.ZipEntry;
 import org.apache.tools.zip.ZipOutputStream;
 import org.kohsuke.accmod.Restricted;
@@ -280,7 +279,7 @@ public final class DirectoryBrowserSupport implements HttpResponse {
             if (zip) {
                 rsp.setContentType("application/zip");
                 String includes, prefix;
-                if (StringUtils.isBlank(rest)) {
+                if (rest == null || rest.isBlank()) {
                     includes = "**";
                     // JENKINS-19947, JENKINS-61473: traditional behavior is to prepend the directory name
                     prefix = baseFile.getName();
@@ -325,9 +324,10 @@ public final class DirectoryBrowserSupport implements HttpResponse {
             } else
             if (serveDirIndex) {
                 // serve directory index
-                glob = baseFile.run(new BuildChildPaths(root, baseFile, req.getLocale()));
-                containsSymlink = baseFile.containsSymLinkChild(getOpenOptions());
-                containsTmpDir = baseFile.containsTmpDirChild(getOpenOptions());
+                var result = baseFile.run(new BuildChildPaths(baseFile, req.getLocale(), getOpenOptions()));
+                glob = result.glob;
+                containsSymlink = result.containsSymLink;
+                containsTmpDir = result.containsTmpDir;
             }
 
             if (glob != null) {
@@ -747,19 +747,32 @@ public final class DirectoryBrowserSupport implements HttpResponse {
         }
     }
 
-    private static final class BuildChildPaths extends MasterToSlaveCallable<List<List<Path>>, IOException> {
-        private VirtualFile root;
+    private static final class BuildChildPathsResult implements Serializable { // TODO Java 21+ record
+        private static final long serialVersionUID = 1;
+        private final List<List<Path>> glob;
+        private final boolean containsSymLink;
+        private final boolean containsTmpDir;
+
+        BuildChildPathsResult(List<List<Path>> glob, boolean containsSymLink, boolean containsTmpDir) {
+            this.glob = glob;
+            this.containsSymLink = containsSymLink;
+            this.containsTmpDir = containsTmpDir;
+        }
+    }
+
+    private static final class BuildChildPaths extends MasterToSlaveCallable<BuildChildPathsResult, IOException> {
         private final VirtualFile cur;
         private final Locale locale;
+        private final OpenOption[] openOptions;
 
-        BuildChildPaths(VirtualFile root, VirtualFile cur, Locale locale) {
-            this.root = root;
+        BuildChildPaths(VirtualFile cur, Locale locale, OpenOption[] openOptions) {
             this.cur = cur;
             this.locale = locale;
+            this.openOptions = openOptions;
         }
 
-        @Override public List<List<Path>> call() throws IOException {
-            return buildChildPaths(cur, locale);
+        @Override public BuildChildPathsResult call() throws IOException {
+            return new BuildChildPathsResult(buildChildPaths(cur, locale), cur.containsSymLinkChild(openOptions), cur.containsTmpDirChild(openOptions));
         }
     }
     /**
